<resources>
    <string name="app_name">EncryptionApplication</string>
    <string name="auth_button_text">Please Authenticate</string>
    <string name="lockscreen_test">LOCKED</string>
    <string name="file_select_encrypt">ENCRYPT A PHOTO</string>
    <string name="file_select_decrypt">DECRYPT A PHOTO</string>
    <string name="camera_encrypt">ENCRYPT FROM CAMERA</string>
    <string name="fingerprint_request_text">FINGERPRINT AUTHENTICATION IS REQUIRED</string>
</resources>