<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/file_encrypt_button"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="60dp"
        android:text="@string/file_select_encrypt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/decrypt_button"
        android:layout_width="184dp"
        android:layout_height="155dp"
        android:layout_marginBottom="100dp"
        android:text="@string/file_select_decrypt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/camera_encrypt_button"
        android:layout_width="112dp"
        android:layout_height="114dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="56dp"
        android:text="@string/camera_encrypt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>